<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/cbx_groups"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/str_activity_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_activity_data"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_data" />

            <EditText
                android:id="@+id/edt_activity_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/cbx_priority"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:inputType="text|textMultiLine" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_margin="5dp"
            android:text="@string/str_txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rbg_status"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_pending"
                android:layout_width="match_parent"
                android:text="@string/str_rb_pending"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_sucess"
                android:text="@string/str_rb_sucess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_save"
        android:tint="#ffffff"
        android:backgroundTint="@color/floatinSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@mipmap/ic_save"
        android:layout_margin="16dp" />
</FrameLayout>