<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="20dp">
        <Switch
            android:id="@+id/choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_groupname"
            android:hint="@string/str_edt_group_name"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/edt_groupname_join"
            android:hint="@string/str_edt_group_name_join"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_add_join"
        android:text="@string/str_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />
</LinearLayout>